--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -1,7 +1,7 @@
 /**************************************************************************************************
                                         GRADLE CONFIG
  *************************************************************************************************/
-
+apply plugin: 'jacoco'
 apply plugin: 'com.android.application'
 
 android {
@@ -14,6 +14,9 @@ android {
     }
 
     buildTypes {
+        debug {
+            testCoverageEnabled true
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
@@ -39,4 +42,58 @@ dependencies {
     compile fileTree(include: '*.jar', dir: 'libs')
     compile project(':androidlibrary:androidlibrary_lib')
     compile project(':androidcommon:androidcommon_lib')
+    testCompile 'junit:junit:4.12'
+}
+
+/**************************************************************************************************
+ CUSTOM TASKS
+ *************************************************************************************************/
+
+// Code to generate JaCoCo reports
+task jacocoTestDebugReport(type:JacocoReport, dependsOn: ["jacocoMergeGen"]) {
+    group = "Reporting"
+    description = "Generate a JaCoCo code-coverage report for debug tests"
+
+    classDirectories = fileTree( // Include relevant .class files
+            dir: "${buildDir}/intermediates/classes/debug",
+            excludes: ['**/R.class',
+                       '**/R$*.class',
+                       '**/*$ViewInjector*.*',
+                       '**/BuildConfig.*',
+                       '**/Manifest*.*',
+                       '**/*Test*.class']
+    )
+
+    sourceDirectories = files("${buildDir.parent}/src/main/java") // Set src directories
+    additionalSourceDirs = files([
+            "${buildDir}/generated/source/buildConfig/debug",
+            "${buildDir}/generated/source/r/debug"
+    ])
+
+    // Generate report from merged .exec file
+    executionData = files("${buildDir}/jacoco/jacocoMergeGen.exec")
+
+    reports { // Report output config
+        xml {
+            enabled = true
+            destination "${project.buildDir}/reports/jacoco/jacoco.xml"
+        }
+        html {
+            enabled = true
+            destination "${project.buildDir}/reports/jacoco"
+        }
+    }
+}
+
+// Code to merge JaCoCo .exec/.ec files
+// Outputs to ${buildDir}/jacoco/TASK_NAME.exec
+// TODO: Put back "testDebug" when junit tests exist
+task jacocoMergeGen(type: JacocoMerge, dependsOn: ["connectedAndroidTestDebug"]) {
+    description = 'Merge test code-coverage results from all different test types'
+
+    executionData = files([
+            // Add any additional .exec/.ec files here if additional flavors of test need to be included
+            // TODO when junit tests exist: "${buildDir}/jacoco/testDebug.exec", // UnitTest output
+            "${buildDir}/outputs/code-coverage/connected/coverage.ec" // AndroidTest output
+    ])
 }
