--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -4,13 +4,19 @@
 apply plugin: 'jacoco'
 apply plugin: 'com.android.application'
 
+group = 'org.opendatakit'
+def androidVersionCode = 127
+version = androidVersionCode
+
 android {
     buildToolsVersion "22.0.1"
     compileSdkVersion 20
     defaultConfig {
-        applicationId "org.opendatakit.scan"
+        applicationId "${group}.scan"
         minSdkVersion 16
         targetSdkVersion 20
+        versionCode androidVersionCode
+        versionName '2.0'
     }
 
     buildTypes {
