--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ allprojects {
     repositories {
         jcenter()
         maven {
+            url 'http://cwe.cs.washington.edu:8082/artifactory/libs-release'
+        }
+        maven {
             url 'http://cwe.cs.washington.edu:8082/artifactory/libs-snapshot'
         }
     }
