--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,9 @@ if (commonProjectPath.exists() && gradle.ext.useLocal) { // check if local commo
     include commonProjectName
     project(commonProjectName).setProjectDir(commonProjectPath) // set local location
 }
+
+if (playServicesPath.exists() && gradle.ext.useLocal) { // check if local common project is present
+    include playServicesName
+    project(playServicesName).setProjectDir(playServicesPath) // set local location
+}
+
