--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,14 @@
-gradle.ext.local = '../gradle-config/local.gradle'
-gradle.ext.remote = 'https://raw.githubusercontent.com/opendatakit/gradle-config/master/remote.gradle'
+gradle.ext.gradleConfigVersion = 2
+
+gradle.ext.local = '../gradle-config/remote.gradle'
+gradle.ext.remote = 'https://raw.githubusercontent.com/opendatakit/gradle-config/' + gradle.ext.gradleConfigVersion + '/remote.gradle'
 gradle.ext.useLocal = true // set to false to always build against remote artifacts
 
 if ((new File(gradle.ext.local)).exists()) {
+    gradle.ext.useLocalPaths = true
     apply from: gradle.ext.local
 } else {
+    gradle.ext.useLocalPaths = false
     apply from: gradle.ext.remote
 }
 
