Added test dependency

--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -75,5 +75,6 @@ dependencies {
         debugCompile(group: groupId, name: playServicesArtifactName, version: playServicesSnapshot, ext: 'aar')
     }
 
+    androidTestCompile 'junit:junit:4.12'
     testCompile 'junit:junit:4.12'
 }
