--- a/scan_app/src/main/AndroidManifest.xml
+++ b/scan_app/src/main/AndroidManifest.xml
@@ -79,7 +79,7 @@
         </activity>
 
         <service
-        android:name="services.ProcessFormService"
+        android:name=".services.ProcessFormService"
         android:label="ODK Scan Background" >
    		</service>
 
