Update build.gradle to be compatible with Espresso

--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -101,4 +101,9 @@ dependencies {
 
     androidTestCompile 'junit:junit:4.12'
     testCompile 'junit:junit:4.12'
+
+    //for Espresso
+    androidTestCompile 'com.android.support.test:runner:0.4'
+    androidTestCompile 'com.android.support.test:rules:0.4'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
 }
