--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -42,7 +42,8 @@ android {
         }
     }
 
-    packagingOptions { // Pick first occurrence of any files that cause conflicts, as defined in common.gradle
+    packagingOptions {
+        // Pick first occurrence of any files that cause conflicts, as defined in common.gradle
         packageList.each {
             pickFirst it
         }
@@ -55,11 +56,11 @@ android {
 }
 
 configurations.all {
-  resolutionStrategy {
-    cacheDynamicVersionsFor(0, 'seconds')
-    cacheChangingModulesFor(0, 'seconds')
-  }
-  transitive = true
+    resolutionStrategy {
+        cacheDynamicVersionsFor(0, 'seconds')
+        cacheChangingModulesFor(0, 'seconds')
+    }
+    transitive = true
 }
 
 
@@ -100,6 +101,7 @@ dependencies {
     }
 
     androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'com.android.support:support-v4:23.1.0'
     testCompile 'junit:junit:4.12'
 
     //for Espresso
