--- a/scan_app/src/main/AndroidManifest.xml
+++ b/scan_app/src/main/AndroidManifest.xml
@@ -1,36 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.opendatakit.scan.android">
+    package="org.opendatakit.scan.android" >
 
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" >
     </uses-feature>
-    
     <uses-feature android:name="android.hardware.camera.flash" >
     </uses-feature>
-    
     <uses-feature android:name="android.hardware.touchscreen" >
     </uses-feature>
 
     <uses-permission android:name="android.permission.CAMERA" >
     </uses-permission>
-    
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
     </uses-permission>
-    
     <uses-permission android:name="android.permission.INTERNET" />
-	
+
     <permission
-          android:name="org.opendatakit.database.RUN_DATABASE"
-          android:protectionLevel="signature" />
+        android:name="org.opendatakit.database.RUN_DATABASE"
+        android:protectionLevel="signature" />
+
     <uses-permission android:name="org.opendatakit.database.RUN_DATABASE" />
 
     <application
         android:name=".application.Scan"
         android:icon="@drawable/icon"
-        android:largeHeap="true"
         android:label="ODK Scan"
+        android:largeHeap="true"
         android:theme="@android:style/Theme.Light" >
         <activity
             android:name=".activities.MainMenuActivity"
@@ -46,11 +43,7 @@
         <activity
             android:name=".activities.JSON2SurveyJSONActivity"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar">
-        </activity>
-        <activity
-            android:name=".activities.PhotographFormActivity"
-            android:screenOrientation="portrait" >
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
         </activity>
         <activity
             android:name=".activities.ViewScannedForms"
@@ -70,8 +63,8 @@
         </activity>
         <activity
             android:name=".activities.DisplayStatusActivity"
-			android:label="status"
-            android:screenOrientation="portrait"  >
+            android:label="status"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".activities.AppSettingsActivity"
@@ -79,10 +72,14 @@
         </activity>
 
         <service
-        android:name=".services.ProcessFormService"
-        android:label="ODK Scan Background" >
-   		</service>
+            android:name=".services.ProcessFormService"
+            android:label="ODK Scan Background" >
+        </service>
 
+        <activity
+            android:name=".activities.AcquireFormImageActivity"
+            android:label="@string/title_activity_process_image" >
+        </activity>
     </application>
 
 </manifest>
