Migrated to IntentService to run fully in the background

--- a/scan_app/src/main/AndroidManifest.xml
+++ b/scan_app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
         </activity>
 
         <service
-            android:name=".services.ProcessFormService"
+            android:name=".services.ProcessFormsService"
             android:label="ODK Scan Background" >
         </service>
 
