--- a/scan_app/src/main/AndroidManifest.xml
+++ b/scan_app/src/main/AndroidManifest.xml
@@ -23,15 +23,24 @@
 
     <uses-permission android:name="org.opendatakit.database.RUN_DATABASE"/>
 
+    <supports-screens
+            android:anyDensity="true"
+            android:xlargeScreens="true"
+            android:largeScreens="true"
+            android:normalScreens="true"
+            android:resizeable="true"
+            android:smallScreens="true" />
+
     <application
             android:name=".application.Scan"
             android:icon="@drawable/icon"
-            android:label="ODK Scan"
+            android:label="@string/app_name"
+            android:allowBackup="false"
             android:largeHeap="true"
-            android:theme="@android:style/Theme.Light">
+            android:theme="@style/Opendatakit">
         <activity
                 android:name=".activities.MainMenuActivity"
-                android:label="ODK Scan"
+                android:label="@string/app_name"
                 android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
