--- a/scan_app/src/main/AndroidManifest.xml
+++ b/scan_app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="org.opendatakit.scan.android">
+          package="org.opendatakit.scan.android"
+          android:sharedUserId="org.opendatakit"
+          android:sharedUserLabel="@string/app_userLabel" >
 
     <uses-feature
             android:glEsVersion="0x00020000"
@@ -25,21 +27,21 @@
 
     <supports-screens
             android:anyDensity="true"
-            android:xlargeScreens="true"
             android:largeScreens="true"
             android:normalScreens="true"
             android:resizeable="true"
-            android:smallScreens="true" />
+            android:smallScreens="true"
+            android:xlargeScreens="true"/>
 
     <application
             android:name=".application.Scan"
+            android:allowBackup="false"
             android:icon="@drawable/icon"
             android:label="@string/app_name"
-            android:allowBackup="false"
             android:largeHeap="true"
             android:theme="@style/Opendatakit">
         <activity
-                android:name=".activities.MainMenuActivity"
+                android:name=".activities.MainActivity"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait">
             <intent-filter>
@@ -74,10 +76,6 @@
                 android:name=".activities.DisplayStatusActivity"
                 android:label="status"
                 android:screenOrientation="portrait">
-        </activity>
-        <activity
-                android:name=".activities.AppSettingsActivity"
-                android:label="Settings">
         </activity>
 
         <service
