--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -29,6 +29,10 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
+	jacoco {
+        version = jacocoVersionName
+    }
+
     buildTypes {
         release {
             minifyEnabled(minify)
