--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'com.android.application'
 
 android {
     // The following are set in the common.gradle file
-    compileSdkVersion(20)
+    compileSdkVersion(compileVersion)
     buildToolsVersion(buildTools)
 
     defaultConfig {
@@ -27,10 +27,6 @@ android {
         versionName(versionCodeName)
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-
-	jacoco {
-        version = jacocoVersionName
     }
 
     buildTypes {
@@ -104,7 +100,6 @@ dependencies {
                 version: (useLatestPlayServices ? latestVersion : playServicesSnapshot), ext: 'aar')
     }
 
-    androidTestCompile 'com.android.support:support-v4:23.1.0'
     androidTestCompile 'junit:junit:4.12'
     testCompile 'junit:junit:4.12'
 
@@ -113,5 +108,5 @@ dependencies {
     androidTestCompile 'com.android.support.test:rules:0.4.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.1'
-    compile 'com.android.support:support-v4:23.1.0'
+    androidTestCompile 'com.android.support:support-v4:23.1.0'
 }
