--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -14,6 +14,8 @@ applicationScripts.each {
 
 apply plugin: 'com.android.application'
 
+com.android.ddmlib.DdmPreferences.setTimeOut(60000)
+
 android {
     // The following are set in the common.gradle file
     compileSdkVersion(compileVersion)
@@ -109,4 +111,8 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.1'
     androidTestCompile 'com.android.support:support-v4:23.1.0'
+
+    //for UI Automator
+    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.1'
+    androidTestCompile 'org.hamcrest:hamcrest-integration:1.3'
 }
