--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle-experimental:0.6.0-alpha7'
+        classpath 'com.android.tools.build:gradle-experimental:0.6.0-alpha8'
     }
 }
 
@@ -18,4 +18,8 @@ allprojects {
             url 'http://cwe.cs.washington.edu:8082/artifactory/libs-snapshot/'
         }
     }
+}
+
+ext {
+    abiFilters = ["armeabi", "armeabi-v7a", "x86"]
 }
