--- a/scan_core/build.gradle
+++ b/scan_core/build.gradle
@@ -31,7 +31,7 @@ model {
                     cppFlags.addAll(["-DDEBUG_CLASSIFIER", "-DOUTPUT_BUBBLE_IMAGES", "-DTIME_IT"])
 
                     //uncomment to enable model training
-                    cppFlags.add("-DALWAYS_COMPUTE_TEMPLATE_FEATURES")
+                    //cppFlags.add("-DALWAYS_COMPUTE_TEMPLATE_FEATURES")
                 }
             }
         }
