--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -80,14 +80,7 @@ dependencies {
                 version: (useLatestCommon ? latestVersion : commonSnapshot), ext: 'aar')
     }
 
-    if (playServicesPath.exists() && gradle.useLocal) { // Local project is favoured
-        compile project(playServicesName)
-    } else {
-        compile(group: groupId, name: playServicesArtifactName,
-                version: (useLatestPlayServices ? latestVersion : playServicesSnapshot), ext: 'aar')
-    }
-
-    androidTestCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services:' + gpsVersion
     testCompile 'junit:junit:4.12'
 
     //for Espresso
