--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -25,8 +25,7 @@ android {
         targetSdkVersion(targetVersion)
         versionCode(releaseVersionCode)
         versionName(versionCodeName)
-        multiDexEnabled(true)
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner(instrumentationRunner)
     }
 
     productFlavors {
@@ -67,10 +66,6 @@ android {
             debuggable(true)
             testCoverageEnabled(testCoverage) // Allows AndroidTest JaCoCo reports to be generated
         }
-    }
-
-    dexOptions {
-        javaMaxHeapSize "2g"
     }
 
     packagingOptions {
