--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,14 @@
 buildscript {
     repositories {
         jcenter()
+		maven {
+			url 'https://maven.google.com'
+		}
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.3'
     }
+
 }
 
 allprojects {
@@ -20,6 +24,9 @@ allprojects {
         ivy {
             url 'http://cwe.cs.washington.edu:8082/artifactory/libs-snapshot/'
         }
+	    maven {
+            url 'https://maven.google.com'
+        }	
     }
 }
 
