--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,11 @@
 buildscript {
     repositories {
         jcenter()
-		maven {
-			url 'https://maven.google.com'
-		}
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.5.4"
     }
 
 }
@@ -15,6 +14,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
         ivy {
             url 'http://cwe.cs.washington.edu:8082/artifactory/libs-demo/'
         }
@@ -24,9 +24,6 @@ allprojects {
         ivy {
             url 'http://cwe.cs.washington.edu:8082/artifactory/libs-snapshot/'
         }
-	    maven {
-            url 'https://maven.google.com'
-        }	
     }
 }
 
