--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -48,6 +48,7 @@ android {
         }
 
         uitest {
+            minSdkVersion(uitestMinSDK)
             dimension 'testing'
         }
     }
@@ -102,6 +103,7 @@ configurations.all {
 dependencies {
     implementation fileTree(include: '*.jar', dir: 'libs')
 
+
     if (libraryProjectPath.exists() && gradle.useLocal) { // Local project is favoured
         implementation project(libraryProjectName)
     } else {
@@ -132,6 +134,6 @@ dependencies {
     androidTestImplementation'com.android.support.test:rules:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.1'
-	androidTestImplementation 'com.android.support:support-annotations:27.0.1'
+	androidTestImplementation 'com.android.support:support-annotations:27.0.2'
 
 }
