--- a/scan_app/src/main/AndroidManifest.xml
+++ b/scan_app/src/main/AndroidManifest.xml
@@ -38,10 +38,21 @@
                 android:name=".activities.MainActivity"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".activities.Launcher"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.EDIT" />
+                <action android:name="android.intent.action.PICK" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <!-- Added to be able to translate the Scan code to JSON -->
