--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -102,6 +102,8 @@ configurations.all {
 
 dependencies {
     implementation fileTree(include: '*.jar', dir: 'libs')
+    implementation 'com.android.support:support-annotations:27.0.2'
+    implementation 'com.android.support:support-v13:27.0.2'
 
 
     if (libraryProjectPath.exists() && gradle.useLocal) { // Local project is favoured
