--- a/scan_app/build.gradle
+++ b/scan_app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     implementation fileTree(include: '*.jar', dir: 'libs')
     implementation 'com.android.support:support-annotations:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:preference-v7:27.1.1'
 
 
     if (libraryProjectPath.exists() && gradle.useLocal) { // Local project is favoured
