--- a/scan_app/src/main/AndroidManifest.xml
+++ b/scan_app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
         <activity
                 android:name=".activities.JSON2SurveyJSONActivity"
                 android:screenOrientation="portrait"
-                android:theme="@android:style/Theme.Translucent.NoTitleBar">
+                android:theme="@style/Theme.AppCompat.Translucent">
         </activity>
         <activity
                 android:name=".activities.ViewScannedForms"
