--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,11 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
-        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.9.8"
+        classpath 'com.android.tools.build:gradle:4.2.2'
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.23.4"
     }
 
 }
@@ -14,7 +14,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         ivy {
             url 'http://cwe.cs.washington.edu:8082/artifactory/libs-demo/'
         }
